--- a/styles/index.css
+++ b/styles/index.css
@@ -59,7 +59,7 @@ nav ul {
     color: #a5a5a5;
     font-family: "Open Sans", sans-serif;
     font-size: 0.75rem;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 0.9375em;
     letter-spacing: 0.205em;
     text-align: center;
@@ -78,16 +78,17 @@ header {
   text-align: center;
 }
 header h1 {
-  font-size: 35px;
+  font-size: 2rem;
   font-weight: 400;
   line-height: 2.5681em;
-  margin: 2.1em auto 0;
+  margin: 2.1em auto 0em;
 }
 header p {
+  text-align: center;
   font-family: "Open Sans", sans-serif;
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 400;
-  margin: 0 3em 0.4375em;
+  margin: 0 auto;
 }
 header button {
   border-radius: 25%;
@@ -98,9 +99,9 @@ header button {
   cursor: pointer;
   color: #fff;
   box-shadow: 0.3125em 0.625em 0.875em 0em rgba(7, 172, 230, 0.2901960784);
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 700;
-  margin: 1.4375em auto 3.375em;
+  margin: 1.4375em auto 4em;
   padding: 1.375em 5.625em;
   background-color: #08a6e4;
 }
@@ -156,15 +157,15 @@ header .header__container__img {
   }
 }
 .section1 {
+  width: 100%;
   display: block;
-  padding-bottom: 3.125em;
+  padding-bottom: 3em;
 }
-.section1 h3 {
-  width: 18.4375em;
-  font-size: 30px;
+.section1 h1 {
+  font-size: 30.4px;
   font-weight: 300;
-  line-height: 2.1875em;
-  margin: 0em auto 1.625em;
+  margin: 0em auto;
+  padding: 0em 1em 0.3em;
 }
 .section1__containerCard {
   display: inline-block;
@@ -173,7 +174,7 @@ header .header__container__img {
 .section1__containerCard__card {
   display: block;
   width: 22.5em;
-  padding: 0.625em 0px 0px;
+  padding: 0.625em 0rem 0rem;
   margin: 0.625em 0;
 }
 .section1__containerCard__card__container {
@@ -190,7 +191,7 @@ header .header__container__img {
 .section1__containerCard__card__container__vectors {
   position: absolute;
   width: 2.7513em;
-  top: 0rem;
+  top: 0px;
 }
 .section1__containerCard__card__container__vectors__head {
   position: absolute;
@@ -250,7 +251,7 @@ header .header__container__img {
 }
 .section1__containerCard__card__title {
   text-align: center;
-  font-size: 1.25rem;
+  font-size: 20px;
   font-weight: 1000;
   line-height: 1.5em;
   letter-spacing: 0.3725em;
@@ -258,7 +259,7 @@ header .header__container__img {
   padding: 0.5em 0 1.375em;
 }
 .section1__containerCard__card__text {
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 400;
   line-height: 1.25em;
   text-align: center;
@@ -267,7 +268,7 @@ header .header__container__img {
   color: #a5a5a5;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 62.5rem) {
   .section1 {
     display: flex;
     flex-direction: column;
@@ -276,7 +277,7 @@ header .header__container__img {
   }
   .section1 h3 {
     width: 100%;
-    font-size: 2.25rem;
+    font-size: 36px;
     font-weight: 400;
     line-height: 2.625em;
     text-align: center;
