--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -29,43 +29,41 @@
   color: #fff;
 }
 
-//section2
+
+//!section2_card
 
 @mixin __card {
   margin: 1.1875em auto 1.125em;
-  width: 19.6875em;
+  width: 19.7em;
   border-radius: 0.3125em;
   display: inline-block;
+  border: .0625em solid #e8e9ed;
   background-color: #fff;
 }
 
 @mixin containerImg {
-  margin: 0 auto;
+  margin: 0em auto 0.75em;
   position: relative;
 }
 
 @mixin containerText {
-  padding-top: 10.625em;
   display: block;
-
-  p {
-    width: 90%;
-  }
+  padding: 9.3em 1em 1.6em 1em;
 }
 
 @mixin title {
-  font-size: 30px;
+  font-size: 1.875rem;
   font-weight: 400;
-  line-height: 2.2012em;
+  margin: 0.5em 0 1.6em;
   text-align: left;
   font-family: $font-primary;
-  width: 90%;
 }
+
 
 @mixin text {
   font-family: $font-secondary;
-  font-size: 14px;
-  font-weight: 600;
+  font-size: .9rem;
+  font-weight: 500;
   line-height: 1.3125em;
   text-align: left;
 }
