--- a/styles/index.css
+++ b/styles/index.css
@@ -292,25 +292,24 @@ header .header__container__img {
   display: block;
   text-align: center;
   background-color: #f7f7f7;
-  padding: 1.5625rem 0 14.375rem;
+  padding: 1.48em 0em 12em;
 }
 .section2__card1 {
   margin: 1.1875em auto 1.125em;
-  width: 19.6875em;
+  width: 19.7em;
   border-radius: 0.3125em;
   display: inline-block;
+  border: 0.0625em solid #e8e9ed;
   background-color: #fff;
-  border: 1px solid #e8e9ed;
 }
 .section2__card1__containerImg1 {
-  margin: 0 auto;
+  margin: 0em auto 0.75em;
   position: relative;
-  background-color: #fff;
 }
 .section2__card1__containerImg1__rectangleMobile {
   position: absolute;
   width: 90.12px;
-  top: 0.9375rem;
+  top: 0.9rem;
 }
 .section2__card1__containerImg1__rectanglePc {
   display: none;
@@ -318,79 +317,38 @@ header .header__container__img {
 .section2__card1__containerImg1__pc {
   position: absolute;
   width: 192.76px;
-  top: 2.3194em;
+  top: 2.35em;
   left: 3.4544em;
 }
-.section2__card1__containerImg1__circleBlue {
-  position: absolute;
-  width: 131.88px;
-  top: 1.0625em;
-  left: 5.625em;
-}
-.section2__card1__containerImg1__circleBluePc {
-  display: none;
-}
-.section2__card1__containerImg1__mobile {
-  position: absolute;
-  width: 160px;
-  top: 1.5631em;
-  left: 5.625em;
-}
-.section2__card1__containerText1 {
-  padding-top: 10.625em;
+.section2__card1__containerText {
   display: block;
-  padding-top: 10.625em;
-  background-color: #fff;
+  padding: 9.3em 1em 1.6em 1em;
 }
-.section2__card1__containerText1 p {
-  width: 90%;
-}
-.section2__card1__containerText1__title {
-  font-size: 30px;
+.section2__card1__containerText__title {
+  font-size: 1.875rem;
   font-weight: 400;
-  line-height: 2.2012em;
+  margin: 0.5em 0 1.6em;
   text-align: left;
   font-family: "Raleway", sans-serif;
-  width: 90%;
-  margin: 0em 1.25em 3.125em;
 }
-.section2__card1__containerText1__text {
-  margin: 0em 1.25em 2.1875em;
+.section2__card1__containerText__text {
   font-family: "Open Sans", sans-serif;
-  font-size: 14px;
-  font-weight: 600;
+  font-size: 0.9rem;
+  font-weight: 500;
   line-height: 1.3125em;
   text-align: left;
-}
-.section2__card1__containerText1__title2 {
-  font-size: 30px;
-  font-weight: 400;
-  line-height: 2.2012em;
-  text-align: left;
-  font-family: "Raleway", sans-serif;
-  width: 90%;
-  margin: 0.4375em 1.0625em 0.9375em;
-}
-.section2__card1__containerText1__text2 {
-  font-family: "Open Sans", sans-serif;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 1.3125em;
-  text-align: left;
-  margin: 0em 1em 1.0625em;
 }
 .section2__card2row {
   margin: 1.1875em auto 1.125em;
-  width: 19.6875em;
+  width: 19.7em;
   border-radius: 0.3125em;
   display: inline-block;
-  background-color: #fff;
   border: 0.0625em solid #e8e9ed;
+  background-color: #fff;
 }
 .section2__card2row__containerImg1 {
-  margin: 0 auto;
+  margin: 0em auto 0.75em;
   position: relative;
-  background-color: #fff;
 }
 .section2__card2row__containerImg1__circleBlue {
   position: absolute;
@@ -403,113 +361,84 @@ header .header__container__img {
 }
 .section2__card2row__containerImg1__mobile {
   position: absolute;
-  width: 160px;
+  width: 175px;
   top: 1.5631em;
   left: 5.625em;
 }
-.section2__card2row__containerText1 {
-  padding-top: 10.625em;
+.section2__card2row__containerText {
   display: block;
-  padding-top: 10.625em;
-  background-color: #fff;
+  padding: 9.3em 1em 1.6em 1em;
 }
-.section2__card2row__containerText1 p {
-  width: 90%;
-}
-.section2__card2row__containerText1__title {
-  font-size: 30px;
+.section2__card2row__containerText__title {
+  font-size: 1.875rem;
   font-weight: 400;
-  line-height: 2.2012em;
+  margin: 0.5em 0 1.6em;
   text-align: left;
   font-family: "Raleway", sans-serif;
-  width: 90%;
-  margin: 0em 1.25em 3.125em;
+  margin-bottom: 0.74em;
 }
-.section2__card2row__containerText1__text {
-  margin: 0em 1.25em 2.1875em;
+.section2__card2row__containerText__text {
   font-family: "Open Sans", sans-serif;
-  font-size: 14px;
-  font-weight: 600;
+  font-size: 0.9rem;
+  font-weight: 500;
   line-height: 1.3125em;
   text-align: left;
 }
-.section2__card2row__containerText1__title2 {
-  font-size: 30px;
-  font-weight: 400;
-  line-height: 2.2012em;
-  text-align: left;
-  font-family: "Raleway", sans-serif;
-  width: 90%;
-  margin: 0.4375em 1.0625em 0.9375em;
-}
-.section2__card2row__containerText1__text2 {
-  font-family: "Open Sans", sans-serif;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 1.3125em;
-  text-align: left;
-  margin: 0em 1em 1.0625em;
-}
-.section2__card2 {
+.section2__card3 {
   margin: 1.1875em auto 1.125em;
-  width: 19.6875em;
+  width: 19.7em;
   border-radius: 0.3125em;
   display: inline-block;
+  border: 0.0625em solid #e8e9ed;
   background-color: #fff;
-  padding: 0em 0 0.625em;
-  margin: 1.25em 0 0em;
 }
-.section2__card2__containerText2 {
-  padding-top: 10.625em;
+.section2__card3__containerText {
   display: block;
+  padding: 9.3em 1em 1.6em 1em;
   padding-top: 1.5625em;
   background-color: #fff;
   border: 0.0625em solid #e8e9ed;
   border-radius: 0.1875em;
 }
-.section2__card2__containerText2 p {
-  width: 90%;
-}
-.section2__card2__containerText2__title {
-  font-size: 30px;
+.section2__card3__containerText__title {
+  font-size: 1.875rem;
   font-weight: 400;
-  line-height: 2.2012em;
+  margin: 0.5em 0 1.6em;
   text-align: left;
   font-family: "Raleway", sans-serif;
-  width: 90%;
   margin: 0.3125em auto 1.0625em;
 }
-.section2__card2__containerText2__text {
+.section2__card3__containerText__text {
   font-family: "Open Sans", sans-serif;
-  font-size: 14px;
-  font-weight: 600;
+  font-size: 0.9rem;
+  font-weight: 500;
   line-height: 1.3125em;
   text-align: left;
-  margin: 1.25em 1.25em 1.5625em;
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.3619em;
 }
-.section2__card2__containerImg2 {
-  margin: 0 auto;
+.section2__card3__containerImg {
+  margin: 0em auto 0.75em;
   position: relative;
   border: 0.0625em solid #e8e9ed;
   border-radius: 0.3125em;
   position: relative;
 }
-.section2__card2__containerImg2__backgroundGreen {
+.section2__card3__containerImg__backgroundGreen {
   border-radius: 0.3125em;
   border: 0.0625em;
   position: absolute;
   padding: 0em;
   left: 0em;
-  top: -0.125em;
+  top: -0.9em;
+  height: 195px;
 }
-.section2__card2__containerImg2__megaphone {
+.section2__card3__containerImg__megaphone {
   z-index: 1;
   position: absolute;
-  top: 1.5em;
+  top: 0.5em;
   right: 1.875em;
   padding: 0;
   margin: 0em;
