--- a/styles/index.css
+++ b/styles/index.css
@@ -616,32 +616,36 @@ header .header__container__img {
   display: block;
   text-align: center;
   margin: 0 auto;
-  padding-top: 3.125em;
+  padding: 0;
 }
 .section3 h3 {
-  margin-bottom: 0.5em;
+  margin: 1.4em 0 0.2em;
   display: block;
-  font-size: 36px;
+  font-size: 2.25rem;
   font-weight: 400;
-  line-height: 2.6412em;
 }
-.section3__card3 {
-  padding: 7.9375em 9.375em;
-  border-radius: 1.125em;
+.section3 button {
+  border-radius: 25%;
+  font-family: "Open Sans", sans-serif;
+  border-color: transparent;
+  border-radius: 40px;
   display: inline-block;
-  margin: 0.3125em auto 3.4375em;
-  position: relative;
-}
-.section3__card3 button {
-  padding: 0.8125em 3.3125em;
+  cursor: pointer;
+  color: #fff;
+  padding: 1em 5em;
   border-radius: 1.4375em;
   position: absolute;
-  left: -4.375em;
-  top: 14.25em;
+  top: 18em;
+  right: 4.5em;
   font-family: "Open Sans", sans-serif;
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 700;
-  line-height: 1.1062em;
+}
+.section3__card3 {
+  border-radius: 1.125em;
+  margin: 1em 1.8em 3.4375em;
+  padding: 1.5em 0em 1.8em;
+  position: relative;
 }
 .section3__card3:nth-of-type(1) {
   border: 0.0625em solid #eb476e;
@@ -656,9 +660,6 @@ header .header__container__img {
   box-shadow: 0.125em 0.5625em 3.125em -1.5625em #eb476e;
   transform: scale(110%);
 }
-.section3__card3:nth-of-type(1):nth-of-type(1):hover .section3__card3__containerPrice {
-  left: 0em;
-}
 .section3__card3:nth-of-type(1):nth-of-type(1):hover button {
   box-shadow: 0.125em 0.5625em 1.5625em -0.625em #eb476e;
 }
@@ -668,24 +669,12 @@ header .header__container__img {
 .section3__card3:nth-of-type(2) button {
   background-color: #08a6e4;
 }
-.section3__card3:nth-of-type(2) .section3__card3__containerPrice {
-  left: 0;
-  padding-left: 1.25em;
-}
 .section3__card3:nth-of-type(2) .section3__card3__containerPrice__price {
   color: #08a6e4;
 }
 .section3__card3:nth-of-type(2):nth-of-type(2):hover {
   box-shadow: 0.125em 0.5625em 3.125em -1.5625em #08a6e4;
   transform: scale(110%);
-}
-.section3__card3:nth-of-type(2):nth-of-type(2):hover .section3__card3__containerPrice {
-  left: 0;
-  padding-left: 0em;
-}
-.section3__card3:nth-of-type(2):nth-of-type(2):hover .section3__card3__containerPrice {
-  left: 0em;
-  padding-left: 0em;
 }
 .section3__card3:nth-of-type(2):nth-of-type(2):hover button {
   box-shadow: 0.125em 0.5625em 1.5625em -0.625em #08a6e4;
@@ -695,10 +684,6 @@ header .header__container__img {
 }
 .section3__card3:nth-of-type(3) button {
   background-color: #55dfb4;
-}
-.section3__card3:nth-of-type(3) .section3__card3__containerPrice {
-  left: 2.1875em;
-  padding-left: 0em;
 }
 .section3__card3:nth-of-type(3) .section3__card3__containerPrice__price {
   color: #55dfb4;
@@ -711,88 +696,57 @@ header .header__container__img {
   box-shadow: 0.125em 0.5625em 1.5625em -0.625em #55dfb4;
 }
 .section3__card3__containerPrice {
-  position: absolute;
-  top: 4.6875em;
-  left: 2.8125em;
-  display: block;
-  margin: 0 auto;
+  text-align: center;
+  display: inline-block;
+  width: 45%;
+  transform: translate(0, -30%);
 }
 .section3__card3__containerPrice__basic {
   font-family: "Raleway", sans-serif;
-  font-size: 20px;
+  font-size: 1.3rem;
   font-weight: 700;
-  line-height: 1.5em;
+  margin: 0 auto;
 }
 .section3__card3__containerPrice__price {
-  width: 59;
-  padding-top: 0em;
   font-family: "Open Sans", sans-serif;
-  font-size: 46px;
+  font-size: 2.875rem;
   font-weight: 300;
-  line-height: 3.75em;
   margin: 0 auto;
 }
 .section3__card3__containerPrice__subtitle {
-  width: 4.625em;
+  text-align: center;
   margin: 0 auto;
   font-family: "Raleway", sans-serif;
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 700;
-  line-height: 0.6306em;
   color: #13253b;
 }
 .section3__card3__containerFeature {
   display: inline-block;
-  width: 40%;
-  position: absolute;
-  left: 9.375em;
-  top: 0;
-  padding-top: 1.125em;
-  right: 0em;
+  width: 53%;
+  list-style: none;
+  text-align: left;
 }
-.section3__card3__containerFeature__input {
-  width: 10%;
-  display: block;
-  position: absolute;
-  padding-top: 0.75em;
-}
-.section3__card3__containerFeature__input__checkbox {
-  width: 0.6875em;
-  margin: 0em auto 1.4375em;
-}
-.section3__card3__containerFeature__text {
-  display: block;
-  position: absolute;
-  width: 89%;
-  right: 0em;
-  padding-top: 0.5em;
-}
-.section3__card3__containerFeature__text__title {
-  width: 7.1875em;
-  left: 1.3125em;
-  margin: 0 0.3125em 1.1875em;
-  font-family: "Open Sans", sans-serif;
-  font-size: 14px;
+.section3__card3__containerFeature li {
+  margin: 0em 0 0.5em 0em;
+  font-size: 0.875rem;
+  text-align: left;
   font-weight: 400;
-  line-height: 1.1919em;
-  text-align: initial;
+  font-family: "Open Sans", sans-serif;
+  padding: 0em 0.1em 1em 0em;
 }
-.section3__card3:hover .section3__card3__containerPrice {
-  width: 50%;
-}
-.section3__card3:hover .section3__card3__containerFeature {
-  width: 50%;
-  left: 9.0625em;
+.section3__card3__containerFeature li img {
+  margin-right: 0.5em;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 62.5rem) {
   .section3 {
     display: flex;
     flex-direction: column;
   }
   .section3 h3 {
     padding: 3.75em 0 0em;
-    font-size: 2.25rem;
+    font-size: 36px;
     font-weight: 400;
     line-height: 2.625em;
     text-align: center;
@@ -825,7 +779,7 @@ header .header__container__img {
   }
   .section3 .section3__card3__containerPrice__basic {
     font-family: "Raleway", sans-serif;
-    font-size: 1.25rem;
+    font-size: 20px;
     font-weight: 700;
     line-height: 1.5em;
   }
@@ -833,7 +787,7 @@ header .header__container__img {
     width: 59;
     padding-top: 0em;
     font-family: "Open Sans", sans-serif;
-    font-size: 2.875rem;
+    font-size: 46px;
     font-weight: 300;
     line-height: 3.75em;
     margin: 0 auto;
@@ -842,7 +796,7 @@ header .header__container__img {
     width: 4.625em;
     margin: 0 auto;
     font-family: "Raleway", sans-serif;
-    font-size: 0.75rem;
+    font-size: 12px;
     font-weight: 700;
     line-height: 0.6306em;
     color: #13253b;
@@ -884,7 +838,7 @@ header .header__container__img {
     left: 1.3125em;
     margin: 0 0.3125em 1.1875em;
     font-family: "Open Sans", sans-serif;
-    font-size: 0.875rem;
+    font-size: 14px;
     font-weight: 400;
     line-height: 1.1919em;
     text-align: initial;
