--- a/styles/index.css
+++ b/styles/index.css
@@ -632,20 +632,21 @@ header .header__container__img {
   display: inline-block;
   cursor: pointer;
   color: #fff;
-  padding: 1em 5em;
-  border-radius: 1.4375em;
+  padding: 1em 4em;
+  border-radius: 1.7em;
   position: absolute;
-  top: 18em;
-  right: 4.5em;
+  top: 15.5em;
+  right: 5em;
   font-family: "Open Sans", sans-serif;
   font-size: 0.8125rem;
-  font-weight: 700;
+  font-weight: 400;
 }
 .section3__card3 {
   border-radius: 1.125em;
-  margin: 1em 1.8em 3.4375em;
-  padding: 1.5em 0em 1.8em;
+  margin: 1em auto 3.4em;
+  padding: 1.5em 0em 2em;
   position: relative;
+  width: 75%;
 }
 .section3__card3:nth-of-type(1) {
   border: 0.0625em solid #eb476e;
@@ -674,10 +675,16 @@ header .header__container__img {
 }
 .section3__card3:nth-of-type(2):nth-of-type(2):hover {
   box-shadow: 0.125em 0.5625em 3.125em -1.5625em #08a6e4;
-  transform: scale(110%);
+  width: 85%;
+  padding: 2.7em 0 2.7em;
+}
+.section3__card3:nth-of-type(2):nth-of-type(2):hover .section3__card3__containerPrice {
+  transform: translate(0, -20%);
 }
 .section3__card3:nth-of-type(2):nth-of-type(2):hover button {
   box-shadow: 0.125em 0.5625em 1.5625em -0.625em #08a6e4;
+  top: 17.5em;
+  right: 6.8em;
 }
 .section3__card3:nth-of-type(3) {
   border: 0.0625em solid #55dfb4;
@@ -691,6 +698,7 @@ header .header__container__img {
 .section3__card3:nth-of-type(3):nth-of-type(3):hover {
   box-shadow: 0.125em 0.5625em 3.125em -1.5625em #55dfb4;
   transform: scale(110%);
+  margin: 1em 0;
 }
 .section3__card3:nth-of-type(3):nth-of-type(3):hover button {
   box-shadow: 0.125em 0.5625em 1.5625em -0.625em #55dfb4;
@@ -699,17 +707,17 @@ header .header__container__img {
   text-align: center;
   display: inline-block;
   width: 45%;
-  transform: translate(0, -30%);
+  transform: translate(0, -13%);
 }
 .section3__card3__containerPrice__basic {
   font-family: "Raleway", sans-serif;
-  font-size: 1.3rem;
-  font-weight: 700;
+  font-size: 1.2rem;
+  font-weight: 800;
   margin: 0 auto;
 }
 .section3__card3__containerPrice__price {
   font-family: "Open Sans", sans-serif;
-  font-size: 2.875rem;
+  font-size: 2.7rem;
   font-weight: 300;
   margin: 0 auto;
 }
@@ -723,20 +731,19 @@ header .header__container__img {
 }
 .section3__card3__containerFeature {
   display: inline-block;
-  width: 53%;
+  width: 49%;
   list-style: none;
   text-align: left;
 }
 .section3__card3__containerFeature li {
-  margin: 0em 0 0.5em 0em;
   font-size: 0.875rem;
   text-align: left;
   font-weight: 400;
   font-family: "Open Sans", sans-serif;
-  padding: 0em 0.1em 1em 0em;
+  padding: 0em 0em 1em 0em;
 }
 .section3__card3__containerFeature li img {
-  margin-right: 0.5em;
+  margin: 0 0.3em 0 0.2em;
 }
 
 @media (min-width: 62.5rem) {
