--- a/styles/index.css
+++ b/styles/index.css
@@ -659,9 +659,15 @@ header .header__container__img {
 }
 .section3__card3:nth-of-type(1):nth-of-type(1):hover {
   box-shadow: 0.125em 0.5625em 3.125em -1.5625em #eb476e;
-  transform: scale(110%);
+  width: 85%;
+  padding: 2.7em 0 2.7em;
+}
+.section3__card3:nth-of-type(1):nth-of-type(1):hover .section3__card3__containerPrice {
+  transform: translate(0, -20%);
 }
 .section3__card3:nth-of-type(1):nth-of-type(1):hover button {
+  top: 17.5em;
+  right: 6.8em;
   box-shadow: 0.125em 0.5625em 1.5625em -0.625em #eb476e;
 }
 .section3__card3:nth-of-type(2) {
@@ -682,9 +688,9 @@ header .header__container__img {
   transform: translate(0, -20%);
 }
 .section3__card3:nth-of-type(2):nth-of-type(2):hover button {
-  box-shadow: 0.125em 0.5625em 1.5625em -0.625em #08a6e4;
   top: 17.5em;
   right: 6.8em;
+  box-shadow: 0.125em 0.5625em 1.5625em -0.625em #08a6e4;
 }
 .section3__card3:nth-of-type(3) {
   border: 0.0625em solid #55dfb4;
@@ -697,10 +703,15 @@ header .header__container__img {
 }
 .section3__card3:nth-of-type(3):nth-of-type(3):hover {
   box-shadow: 0.125em 0.5625em 3.125em -1.5625em #55dfb4;
-  transform: scale(110%);
-  margin: 1em 0;
+  width: 85%;
+  padding: 2.7em 0 2.7em;
+}
+.section3__card3:nth-of-type(3):nth-of-type(3):hover .section3__card3__containerPrice {
+  transform: translate(0, -20%);
 }
 .section3__card3:nth-of-type(3):nth-of-type(3):hover button {
+  top: 17.5em;
+  right: 6.8em;
   box-shadow: 0.125em 0.5625em 1.5625em -0.625em #55dfb4;
 }
 .section3__card3__containerPrice {
