--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,6 +6,7 @@
 @import "./section2.scss";
 @import "./section3.scss";
 @import "./section4.scss";
+@import "./footer.scss";
 
 * {
   box-sizing: border-box;
@@ -27,55 +28,6 @@ body {
   main {
     display: block;
   }
-
-  footer {
-    width: 100%;
-    box-shadow: 0em -0.3125em 2.5em 0.3125em #00000033;
-    position: relative;
-    margin: 250px 0px;
-    padding: 10px 0;
-
-    .pack {
-      display: block;
-      width: 60%;
-      &__logoFooter {
-        color: $color-primary;
-        font-size: 1.625em;
-        font-weight: 300;
-        line-height: 1.875em;
-        text-align: left;
-        margin: 0em 1.0625em 0em;
-        padding: 0.625em 0.4375em 0em;
-      }
-
-      &__copyright {
-        width: 11.6875em;
-        padding: 0em 0em 0.625em;
-        font-family: $font-secondary;
-        font-size: 0.6875rem;
-        font-weight: 400;
-        line-height: 0.9363em;
-        margin-left: 1.5625em;
-        color: #a5a5a5;
-      }
-    }
-
-    .packLogos {
-      position: absolute;
-      top: 1.875em;
-      left: 18.125em;
-      display: inline-block;
-
-      &__x {
-        margin-left: -1.25em;
-        padding: 0 0.9375em;
-      }
-
-      &__facebook {
-        padding-right: 1.25em;
-      }
-    }
-  }
 }
 
 @media (min-width: 1000px) {
@@ -84,49 +36,5 @@ body {
     flex-direction: column;
     justify-items: center;
     align-items: center;
-
-    footer {
-      width: 100%;
-      margin-top: 3.75em;
-      .limit {
-        @include limit;
-        flex-direction: row;
-        justify-content: space-between;
-
-        .pack {
-          display: flex;
-          flex-direction: column;
-          margin-left: 5.3125em;
-          width: 40%;
-
-          &__logoFooter {
-            @include logo;
-            padding: 0 0.9375em;
-            font-size: 1.625rem;
-            font-weight: 300;
-            line-height: 1.875em;
-            text-align: left;
-          }
-
-          &__copyright {
-            margin: 0 1.125em;
-            font-size: 0.6875rem;
-            font-weight: 400;
-            line-height: 0.9363em;
-            text-align: left;
-          }
-        }
-
-        .packLogos {
-          display: flex;
-          top: 0;
-          left: -6.25em;
-          position: relative;
-          width: 4.6875em;
-          justify-content: space-around;
-          margin-right: 2.5em;
-        }
-      }
-    }
   }
 }
